<resources>
    <string name="app_name">Slides2</string>
    <string name="starter">This code is for Slide2. To implement example of each slide, update the manifest to run that activity.</string>
    <string name="hello_world">Hello World!</string>
    <string name="ok">OK</string>
    <string name="button">Button!</string>
    <string name="text_view_1">Text View 1</string>
    <string name="text_view_2">Text view 2</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="reminder">Reminder name</string>
    <string name="done">Done</string>
    <string name="button_info">Buttons in different styles</string>
    <string name="good">Good</string>
    <string name="select_mood">Select your mood !</string>
    <string name="so_so">~ So So ~</string>
    <string name="number">Enter your number ...</string>
    <string name="email_address">Emali address</string>
    <string name="name">Name</string>
    <string name="postal_address_hint">Please enter your postal address</string>
    <string name="submit">Submit</string>
    <string name="auto_complete_ex">Auto Complete Ex.</string>
    <string name="white">White</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="set_screen_color">Set screen color.</string>
    <string name="last_command_is_boss">Last command is BOSS !!</string>
    <string name="pick_date">Pick Date</string>
    <string name="new_game">New Game</string>
    <string name="help">Help</string>
    <string name="menu">Menu Sample ...</string>
    <string name="floating_context_menu_text">Floating Context Menu Test</string>

    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>

    <string name="popup_menu">Popup Menu Sample!</string>
    <string name="menu_group">Menu Group Sample...</string>
    <string name="live_help">Live Help!</string>
    
    <string name="dialog_message">Dialog message comes here.</string>
    <string name="dialog_title">Title</string>
    <string name="alert_dialog">Alert Dialog Sample!</string>
    <string name="cancel">Cancel</string>
    <string name="pick_planet">Pick a planet</string>
    <string name="show_dialog_fragment">Show Dialog Fragment</string>
    <string name="fire_missiles">Fire missiles?</string>
    <string name="fire">Fire</string>
    <string name="dialog_custom">Dialog with Custom Layout</string>
    <string name="toast_view">Click to show custom Toast</string>
</resources>
