<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout">

    <TextView
        android:id="@+id/text_view_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/set_screen_color"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"/>

    <RadioGroup
        app:layout_constraintTop_toBottomOf="@+id/text_view_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/white"
            android:text="@string/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:id="@+id/green"
            android:text="@string/green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:id="@+id/blue"
            android:text="@string/blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked" />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>